Доработка декоративных элементов

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="slider-block">
                   <h2 class="slider-heading">Порхает как бабочка,жалит как пчела!</h2>
                   <p class="slider-paragraph">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-                  <a class="button button-slider" href="#">Подробнее</a>
+                  <a class="button" href="#">Подробнее</a>
                   <ul class="slider-specifications-list">
                     <li class="slider-specifications-item">
                       <b class="slider-specifications">800 м</b><span class="slider-description">Дальность полета</span>
@@ -261,13 +261,13 @@
           <div class="page-container-services">
             <ul class="services-list-button">
               <li class="list-button-item">
-                <button class="button button-services" type="button">Доставка</button>
+                <button class="button button-services-active" type="button">Доставка</button>
               </li>
               <li class="list-button-item">
-                <button class="button button-services" type="button">Гарантия</button>
+                <button class="button" type="button">Гарантия</button>
               </li>
               <li class="list-button-item">
-                <button class="button button-services" type="button">Кредит</button>
+                <button class="button" type="button">Кредит</button>
               </li>
             </ul>
             <ul class="services-list">
@@ -334,7 +334,7 @@
                 <li class="contact-list-item">СДИК</li>
                 <li class="contact-list-item">ТоксБерри</li>
               </ul>
-              <a class="button button-contact" href="#">Подробнее о нас</a>
+              <a class="button" href="#">Подробнее о нас</a>
             </div>
             <div class="contact-information-block">
               <h2 class="contact-heading">Контакты</h2>
@@ -344,7 +344,7 @@
               <b class="contact-text">Время работы</b>
               <p class="contact-paragraph">пн—пт: с 10:00 до 22:00</p>
               <p class="contact-paragraph">сб—вс: с 10:00 до 19:00</p>
-              <a class="button button-contact" href="#">Напишите нам</a>
+              <a class="button" href="#">Напишите нам</a>
             </div>
           </div>
         </section>
