--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 
 
     <header class="main-header">
-      <nav class="navigation background-navigation">
+      <nav class="navigation navigation-main">
         <h1 class="visually-hidden">Device</h1>
         <a class="logo-link" href = "#">
           <span>
@@ -61,6 +61,33 @@
               </svg>
               Корзина
             </a>
+            <div class="popover-cart">
+              <div class="popover-cart-content">
+                <button class="popover-cart-close" type="button">
+                  2
+                  <span class="visually-hidden">Закрыть</span>
+                </button>
+                <ul class="popover-cart-list">
+                  <li class="popover-cart-item cart-item">
+                    <img src="images/catalog/self1-catalog.jpg" width="39px" height="43px" alt="">
+                    <p>Любительская<br> селфи-палка</p>
+                    <button class="popover-cart-item-close" type="button"></button>
+                  </li>
+                  <li class="popover-cart-item cart-item">
+                    <img src="images/catalog/self2-catalog.jpg" width="39px" height="43px" alt="">
+                    <p>Профессиональная<br> селфи-палка</p>
+                    <button class="popover-cart-item-close" type="button"></button>
+                  </li>
+                  <li class="popover-cart-item popover-cart-price">
+                    <span>Товаров: 2</span>
+                    <span>Сумма: 2000 ₽</span>
+                  </li>
+                  <li class="popover-cart-item">
+                    <a class="button-open-cart" href="#">Открыть корзину</a>
+                  </li>
+                </ul>
+              </div>
+          </div>
           </li>
         </ul>
         <ul class="navigation-list">
@@ -80,6 +107,22 @@
                 </svg>
               </span>
             </a>
+            <div class="popover popover-cart visually-hidden">
+              <div class="popover-content">
+                  <ul class="popover-list">
+                    <li class="popover-list-item"><p>Виртуальная реальность</p></li>
+                    <li class="popover-list-item"><p>Моноподы для селфи</p></li>
+                    <li class="popover-list-item"><p>Экшн-камеры</p></li>
+                  </ul>
+                  <ul class="popover-list">
+                    <li class="popover-list-item"><p>Фитнес-браслеты</p></li>
+                    <li class="popover-list-item"><p>Умные часы</p></li>
+                  </ul>
+                  <ul class="popover-list">
+                    <li class="popover-list-item"><p>Квадрокоптеры</p></li>
+                  </ul>
+              </div>
+          </div>
           </li>
           <li class="navigation-item">
             <a class="navigation-services navigation-services-margin" href="#">Доставка</a>
@@ -116,6 +159,15 @@
             <h2 class="catalog-title">Фильтр:</h2>
             <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">Цвет</legend>
+                <div class="range-wrapper-inputs">
+                  <label class="catalog-filter-label">
+                    от <input class="range-input" type="number" value="50" name="min-price"> ₽
+                  </label>
+                  <label class="catalog-filter-label">
+                    до <input class="range-input" type="number" value="1500" name="max-price" style="width: 37px"> ₽
+                  </label>
+                </div>
+              </div>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
