--- a/index.html
+++ b/index.html
@@ -61,6 +61,33 @@
                 </svg>
                 Корзина
               </a>
+              <div class="popover-cart">
+                <div class="popover-cart-content">
+                  <button class="popover-cart-close" type="button">
+                    2
+                    <span class="visually-hidden">Закрыть</span>
+                  </button>
+                  <ul class="popover-cart-list">
+                    <li class="popover-cart-item cart-item">
+                      <img src="images/catalog/self1-catalog.jpg" width="39px" height="43px" alt="">
+                      <p>Любительская<br> селфи-палка</p>
+                      <button class="popover-cart-item-close" type="button"></button>
+                    </li>
+                    <li class="popover-cart-item cart-item">
+                      <img src="images/catalog/self2-catalog.jpg" width="39px" height="43px" alt="">
+                      <p>Профессиональная<br> селфи-палка</p>
+                      <button class="popover-cart-item-close" type="button"></button>
+                    </li>
+                    <li class="popover-cart-item popover-cart-price">
+                      <span>Товаров: 2</span>
+                      <span>Сумма: 2000 ₽</span>
+                    </li>
+                    <li class="popover-cart-item">
+                      <a class="button-open-cart" href="#">Открыть корзину</a>
+                    </li>
+                  </ul>
+                </div>
+            </div>
             </li>
           </ul>
           <ul class="navigation-list">
@@ -80,6 +107,22 @@
                   </svg>
                 </span>
               </a>
+              <div class="popover popover-cart visually-hidden">
+                <div class="popover-content">
+                    <ul class="popover-list">
+                      <li class="popover-list-item"><p>Виртуальная реальность</p></li>
+                      <li class="popover-list-item"><p>Моноподы для селфи</p></li>
+                      <li class="popover-list-item"><p>Экшн-камеры</p></li>
+                    </ul>
+                    <ul class="popover-list">
+                      <li class="popover-list-item"><p>Фитнес-браслеты</p></li>
+                      <li class="popover-list-item"><p>Умные часы</p></li>
+                    </ul>
+                    <ul class="popover-list">
+                      <li class="popover-list-item"><p>Квадрокоптеры</p></li>
+                    </ul>
+                </div>
+            </div>
             </li>
             <li class="navigation-item">
               <a class="navigation-services navigation-services-margin" href="#">Доставка</a>
