--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   </svg>
                 </span>
               </a>
-              <div class="popover popover-cart">
+              <div class="popover popover-cart visually-hidden">
                 <div class="popover-content">
                     <ul class="popover-list">
                       <li class="popover-list-item"><p>Виртуальная реальность</p></li>
@@ -512,9 +512,10 @@
                   <label class="label-input" for="input-name">Ваше имя:</label>
                   <input class="modal-form-field field" type="text" id="input-name" name="input-name" placeholder="Введите имя">
                 </p>
-                <p class="field-group">
-                  <label class="label-input" for="input-password">Ваш e-mail:</label>
-                  <input class="modal-form-field field" type="password" id="input-password" name="input-password" placeholder="Пароль">
+                <p class="field-group field-group-error">
+                  <label class="label-input" for="input-e-mail">Ваш e-mail:</label>
+                  <input class="modal-form-field field" type="e-mail" id="input-e-mail" name="input-e-mail" placeholder="Пароль">
+                  <span class="modal-note">Забавный у вас адрес</span>
                 </p>
               </li>
               <li class="modal-form-item">
