--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <path d="M15.7278 14.3L12.6278 11.2C13.5278 10 14.0278 8.6 14.0278 7C14.0278 3.1 10.9278 0 7.02777 0C3.12777 0 0.027771 3.1 0.027771 7C0.027771 10.9 3.12777 14 7.02777 14C8.62777 14 10.0278 13.5 11.2278 12.6L14.3278 15.7C14.5278 15.9 14.7278 16 15.0278 16C15.6278 16 16.0278 15.6 16.0278 15C16.0278 14.8 15.9278 14.5 15.7278 14.3ZM2.02777 7C2.02777 4.2 4.22777 2 7.02777 2C9.82777 2 12.0278 4.2 12.0278 7C12.0278 9.8 9.82777 12 7.02777 12C4.22777 12 2.02777 9.8 2.02777 7Z" fill="black"/>
                   </svg>
                 </span>
-                <input class="input-search" type="text" id="search-nav" name="search-nav" placeholder="Поиск по сайту">
+                  <input class="input-search" type="text" id="search-nav" name="search-nav" placeholder="Поиск по сайту">
                 <button class="button-search" type="submit">Найти</button>
               </form>
             </li>
@@ -404,7 +404,7 @@
             <h2 class="distribution-heading">Подпишитесь на рассылку</h2>
             <p class="distribution-paragraph">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
             <form class="distribution-form" action="https://echo.htmlacademy.ru/" method="post">
-              <input class="input-distribution" type="email" id="email-distribution" name="email-distribution" placeholder="Ваш e-mail">
+              <input class="input-distribution input-distribution-error" type="email" id="email-distribution" name="email-distribution" placeholder="Ваш e-mail">
               <button class="button-distribution" type="submit">Подписаться</button>
               <svg class="distribution-icon" width="16" height="17" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                 <path d="M15.498 1L5.89805 10.3L1.49805 6V10.7L5.99805 15L15.498 5.7V1Z" fill="#08AF00"/>
@@ -530,7 +530,7 @@
                       </span>
                       <span class="quantity-wrapper">
                       <button class="value-minus" type="button"></button>
-                      <input class="modal-form-number field" type="text" id="input-number" name="input-number" placeholder="">
+                      <input class="modal-form-number field" type="text" id="input-number" name="input-number" placeholder="1">
                       <button class="value-plus" type="button"></button>
                       </span>
                 </p>
