--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 
 
     <header class="main-header">
-      <nav class="navigation navigation-main">
+      <nav class="navigation navigation-after">
         <h1 class="visually-hidden">Device</h1>
         <a class="logo-link" href = "#">
           <span>
@@ -37,11 +37,20 @@
             </form>
           </li>
           <li class="navigation-item navigation-login">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link visually-hidden" href="#">
               <svg class="navigation-icon" width="14" height="12" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0.027771 12H13.0278C12.8278 9.4 10.9278 7.2 8.32777 6.5C9.32777 5.9 10.0278 4.8 10.0278 3.5C10.0278 1.6 8.42777 0 6.52777 0C4.62777 0 3.02777 1.6 3.02777 3.5C3.02777 4.8 3.72777 5.9 4.72777 6.5C2.12777 7.2 0.227771 9.4 0.027771 12Z" fill="black"/>
               </svg>
               Войти
+            </a>
+            <a class="navigation-link" href="#">
+              <svg class="navigation-icon" width="14" height="12" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.027771 12H13.0278C12.8278 9.4 10.9278 7.2 8.32777 6.5C9.32777 5.9 10.0278 4.8 10.0278 3.5C10.0278 1.6 8.42777 0 6.52777 0C4.62777 0 3.02777 1.6 3.02777 3.5C3.02777 4.8 3.72777 5.9 4.72777 6.5C2.12777 7.2 0.227771 9.4 0.027771 12Z" fill="black"/>
+              </svg>
+              Коля Петухов
+            </a>
+            <a class="navigation-exit-profile" href="#">
+              Выйти
             </a>
           </li>
           <li class="navigation-item">
@@ -96,7 +105,7 @@
               Каталог товаров
               <span class="navigation-icon-catalog">
                 <svg class="navigation-icon-catalog-item" width="16" height="16" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-                  <g opacity="0.3" clip-path="url(#clip0_26956_603)">
+                  <g clip-path="url(#clip0_26956_603)">
                   <path d="M16 7H9V0H7V7H0V9H7V16H9V9H16V7Z" fill="black"/>
                   </g>
                   <defs>
@@ -159,12 +168,12 @@
       <section class="catalog-products">
         <div class="page-container-catalog">
           <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-            <h2 class="catalog-title">Фильтр:</h2>
+            <h2 class="catalog-title catalog-filter">Фильтр:</h2>
             <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Цена:</legend>
+              <legend class="catalog-filter-title">Стоимость:</legend>
               <div class="range">
                 <div class="range-scale">
-                  <div class="range-bar" style="left: 42px; width: 136px">
+                  <div class="range-bar" style="left: 42px; width: 119px">
                     <button class="range-toggle toggle-min">
                       <span class="visually-hidden">Изменить минимальную цену.</span>
                     </button>
@@ -175,10 +184,10 @@
                 </div>
                 <div class="range-wrapper-inputs">
                   <label class="catalog-filter-label">
-                    от <input class="range-input" type="number" value="450" name="min-price"> ₽
+                    от <input class="range-input" type="number" value="0" name="min-price">
                   </label>
                   <label class="catalog-filter-label">
-                    до <input class="range-input" type="number" value="1500" name="max-price" style="width: 37px"> ₽
+                    до <input class="range-input" type="number" value="5000" name="max-price" style="width: 50px">
                   </label>
                 </div>
               </div>
@@ -188,32 +197,38 @@
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox" name="Black" checked>
-                    Черный
+                    <input class="visually-hidden control-input" type="checkbox" name="Black" checked>
+                    <span class="control-mark">
+                    </span>
+                    <span class="control-label">Черный</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox" name="White" checked>
-                    Белый
+                    <input class="visually-hidden control-input" type="checkbox" name="White" checked>
+                    <span class="control-mark"></span>
+                    <span class="control-label">Белый</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox" name="blue">
-                    Синий
+                    <input class="visually-hidden control-input" type="checkbox" name="blue">
+                    <span class="control-mark"></span>
+                    <span class="control-label">Синий</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox" name="red">
-                    Красный
+                    <input class="visually-hidden control-input" type="checkbox" name="red">
+                    <span class="control-mark"></span>
+                    <span class="control-label">Красный</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox" name="Pink">
-                    Розовый
+                    <input class="visually-hidden control-input" type="checkbox" name="Pink">
+                    <span class="control-mark"></span>
+                    <span class="control-label">Розовый</span>
                   </label>
                 </li>
               </ul>
@@ -239,7 +254,7 @@
           </form>
           <div class="catalog-right-column">
             <div class="sorting-container">
-              <h2 class="catalog-title">Сортировка:</h2>
+              <h2 class="catalog-title catalog-sorting">Сортировка:</h2>
               <select class="select-control" aria-label="Сортировка:">
                 <option value="popular">Популярные</option>
               </select>
