--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
                 </svg>
                 Войти
               </a>
+              <a class="navigation-link visually-hidden" href="#">
+                <svg class="navigation-icon" width="14" height="12" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0.027771 12H13.0278C12.8278 9.4 10.9278 7.2 8.32777 6.5C9.32777 5.9 10.0278 4.8 10.0278 3.5C10.0278 1.6 8.42777 0 6.52777 0C4.62777 0 3.02777 1.6 3.02777 3.5C3.02777 4.8 3.72777 5.9 4.72777 6.5C2.12777 7.2 0.227771 9.4 0.027771 12Z" fill="black"/>
+                </svg>
+                Коля Петухов
+              </a>
+              <a class="navigation-exit-profile visually-hidden" href="#">
+                Выйти
+              </a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link navigation-compare" href="#">
@@ -96,7 +105,7 @@
                 Каталог товаров
                 <span class="navigation-icon-catalog">
                   <svg class="navigation-icon-catalog-item" width="16" height="16" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-                    <g opacity="0.3" clip-path="url(#clip0_26956_603)">
+                    <g clip-path="url(#clip0_26956_603)">
                     <path d="M16 7H9V0H7V7H0V9H7V16H9V9H16V7Z" fill="black"/>
                     </g>
                     <defs>
@@ -360,7 +369,7 @@
               <p class="delivery-text">ДОСТАВИМ РЕДКИЙ ТОВАР ПОД ЗАКАЗ</p>
                 <span class="delivery-info">
                   <svg class="delivery-info-icon" width="2" height="12" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-                    <g opacity="0.3" clip-path="url(#clip0_32506_30)">
+                    <g clip-path="url(#clip0_32506_30)">
                     <path d="M2 0H0V2H2V0Z" fill="black"/>
                     <path d="M2 4H0V12H2V4Z" fill="black"/>
                     </g>
@@ -496,7 +505,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal-container">
+    <div class="modal-container visually-hidden">
       <div class="modal modal-delivery">
         <section class="modal-content">
           <div class="modal-wrapper">
