--- a/9/catalog.html
+++ b/9/catalog.html
@@ -10,7 +10,7 @@
 
 
     <header class="main-header">
-      <nav class="navigation navigation-main">
+      <nav class="navigation navigation-after">
         <h1 class="visually-hidden">Device</h1>
         <a class="logo-link" href = "#">
           <span>
@@ -33,16 +33,25 @@
                   <path d="M15.7278 14.3L12.6278 11.2C13.5278 10 14.0278 8.6 14.0278 7C14.0278 3.1 10.9278 0 7.02777 0C3.12777 0 0.027771 3.1 0.027771 7C0.027771 10.9 3.12777 14 7.02777 14C8.62777 14 10.0278 13.5 11.2278 12.6L14.3278 15.7C14.5278 15.9 14.7278 16 15.0278 16C15.6278 16 16.0278 15.6 16.0278 15C16.0278 14.8 15.9278 14.5 15.7278 14.3ZM2.02777 7C2.02777 4.2 4.22777 2 7.02777 2C9.82777 2 12.0278 4.2 12.0278 7C12.0278 9.8 9.82777 12 7.02777 12C4.22777 12 2.02777 9.8 2.02777 7Z" fill="black"/>
                 </svg>
               </span>
-              <input class="input-search" type="text" id="search-nav" name="search-nav" placeholder="Поиск по сайту">
+                <input class="input-search" type="text" id="search-nav" name="search-nav" placeholder="Поиск по сайту">
               <button class="button-search" type="submit">Найти</button>
             </form>
           </li>
           <li class="navigation-item navigation-login">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link visually-hidden" href="#">
               <svg class="navigation-icon" width="14" height="12" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0.027771 12H13.0278C12.8278 9.4 10.9278 7.2 8.32777 6.5C9.32777 5.9 10.0278 4.8 10.0278 3.5C10.0278 1.6 8.42777 0 6.52777 0C4.62777 0 3.02777 1.6 3.02777 3.5C3.02777 4.8 3.72777 5.9 4.72777 6.5C2.12777 7.2 0.227771 9.4 0.027771 12Z" fill="black"/>
               </svg>
               Войти
+            </a>
+            <a class="navigation-link" href="#">
+              <svg class="navigation-icon" width="14" height="12" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.027771 12H13.0278C12.8278 9.4 10.9278 7.2 8.32777 6.5C9.32777 5.9 10.0278 4.8 10.0278 3.5C10.0278 1.6 8.42777 0 6.52777 0C4.62777 0 3.02777 1.6 3.02777 3.5C3.02777 4.8 3.72777 5.9 4.72777 6.5C2.12777 7.2 0.227771 9.4 0.027771 12Z" fill="black"/>
+              </svg>
+              Коля Петухов
+            </a>
+            <a class="navigation-exit-profile" href="#">
+              Выйти
             </a>
           </li>
           <li class="navigation-item">
@@ -62,7 +71,7 @@
               </svg>
               Корзина
             </a>
-            <div class="popover-cart">
+            <div class="popover-cart visually-hidden">
               <div class="popover-cart-content">
                 <button class="popover-cart-close" type="button">
                   2
@@ -93,11 +102,11 @@
         </ul>
         <ul class="navigation-list">
           <li class="navigation-item navigation-catalog">
-            <a class="navigation-services" href="#">
+            <a class="navigation-services navigation-popover-active" href="#">
               Каталог товаров
               <span class="navigation-icon-catalog">
-                <svg width="16" height="16" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-                  <g opacity="0.3" clip-path="url(#clip0_26956_603)">
+                <svg class="navigation-icon-catalog-item" width="16" height="16" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0_26956_603)">
                   <path d="M16 7H9V0H7V7H0V9H7V16H9V9H16V7Z" fill="black"/>
                   </g>
                   <defs>
@@ -105,6 +114,9 @@
                   <rect width="16" height="16"/>
                   </clipPath>
                   </defs>
+                </svg>
+                <svg class="navigation-icon-catalog-item" width="16" height="2" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M16 0H0V2H16V0Z" fill="black"/>
                 </svg>
               </span>
             </a>
@@ -157,47 +169,67 @@
       <section class="catalog-products">
         <div class="page-container-catalog">
           <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-            <h2 class="catalog-title">Фильтр:</h2>
+            <h2 class="catalog-title catalog-filter">Фильтр:</h2>
             <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Цвет</legend>
+              <legend class="catalog-filter-title">Стоимость:</legend>
+              <div class="range">
+                <div class="range-scale">
+                  <div class="range-bar" style="left: 42px; width: 119px">
+                    <button class="range-toggle toggle-min">
+                      <span class="visually-hidden">Изменить минимальную цену.</span>
+                    </button>
+                    <button class="range-toggle toggle-max">
+                      <span class="visually-hidden">Изменить максимальную цену.</span>
+                    </button>
+                  </div>
+                </div>
                 <div class="range-wrapper-inputs">
                   <label class="catalog-filter-label">
-                    от <input class="range-input" type="number" value="50" name="min-price"> ₽
+                    от <input class="range-input" type="number" value="0" name="min-price">
                   </label>
                   <label class="catalog-filter-label">
-                    до <input class="range-input" type="number" value="1500" name="max-price" style="width: 37px"> ₽
+                    до <input class="range-input" type="number" value="5000" name="max-price" style="width: 50px">
                   </label>
                 </div>
               </div>
+            </fieldset>
+            <fieldset class="catalog-filter-group">
+              <legend class="catalog-filter-title">Цвет</legend>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox" name="Black" checked>
-                    Черный
+                    <input class="visually-hidden control-input" type="checkbox" name="Black" checked>
+                    <span class="control-mark">
+                    </span>
+                    <span class="control-label">Черный</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox" name="White" checked>
-                    Белый
+                    <input class="visually-hidden control-input" type="checkbox" name="White" checked>
+                    <span class="control-mark"></span>
+                    <span class="control-label">Белый</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox" name="blue">
-                    Синий
+                    <input class="visually-hidden control-input" type="checkbox" name="blue">
+                    <span class="control-mark"></span>
+                    <span class="control-label">Синий</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox" name="red">
-                    Красный
+                    <input class="visually-hidden control-input" type="checkbox" name="red">
+                    <span class="control-mark"></span>
+                    <span class="control-label">Красный</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox" name="Pink">
-                    Розовый
+                    <input class="visually-hidden control-input" type="checkbox" name="Pink">
+                    <span class="control-mark"></span>
+                    <span class="control-label">Розовый</span>
                   </label>
                 </li>
               </ul>
@@ -223,7 +255,7 @@
           </form>
           <div class="catalog-right-column">
             <div class="sorting-container">
-              <h2 class="catalog-title">Сортировка:</h2>
+              <h2 class="catalog-title catalog-sorting">Сортировка:</h2>
               <select class="select-control" aria-label="Сортировка:">
                 <option value="popular">Популярные</option>
               </select>
