--- a/index.html
+++ b/index.html
@@ -40,12 +40,6 @@
                 </svg>
                 Войти
               </a>
-              <a class="navigation-link visually-hidden" href="#">
-                <svg class="navigation-icon" width="14" height="12" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M0.027771 12H13.0278C12.8278 9.4 10.9278 7.2 8.32777 6.5C9.32777 5.9 10.0278 4.8 10.0278 3.5C10.0278 1.6 8.42777 0 6.52777 0C4.62777 0 3.02777 1.6 3.02777 3.5C3.02777 4.8 3.72777 5.9 4.72777 6.5C2.12777 7.2 0.227771 9.4 0.027771 12Z" fill="black"/>
-                </svg>
-                Коля Петухов
-              </a>
               <a class="navigation-exit-profile visually-hidden" href="#">
                 Выйти
               </a>
@@ -62,16 +56,16 @@
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">
-                <button class="navigation-cart-close" type="button">
+                <span class="navigation-cart-close">
                   2
                   <span class="visually-hidden">Закрыть</span>
-                </button>
+                </span>
                 <svg class="navigation-icon" width="17" height="14" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                   <path d="M15.3278 5L11.8278 5.2L8.62783 0.3C8.52783 0.1 8.22783 0 8.02783 0C7.82783 0 7.52783 0.1 7.42783 0.3L4.22783 5.2H0.727832C0.327832 5.2 0.027832 5.5 0.027832 5.9C0.027832 6 0.027832 6 0.027832 6.1L1.92783 12.9C2.12783 13.6 2.62783 14 3.32783 14H12.7278C13.4278 14 13.9278 13.6 14.1278 12.9L16.0278 6C16.0278 5.9 16.0278 5.9 16.0278 5.8C16.0278 5.4 15.7278 5 15.3278 5ZM8.02783 1.9L10.2278 5.1H5.92783L8.02783 1.9Z" fill="black"/>
                 </svg>
                 Корзина
               </a>
-              <div class="popover-cart ">
+              <div class="popover-cart visually-hidden">
                 <div class="popover-cart-content">
                   <ul class="popover-cart-list">
                     <li class="popover-cart-item cart-item">
@@ -116,7 +110,7 @@
                   </svg>
                 </span>
               </a>
-              <div class="popover popover-cart visually-hidden">
+              <div class="popover">
                 <div class="popover-content">
                     <ul class="popover-list">
                       <li class="popover-list-item"><p>Виртуальная реальность</p></li>
@@ -502,7 +496,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal-container visually-hidden">
+    <div class="modal-container">
       <div class="modal modal-delivery">
         <section class="modal-content">
           <div class="modal-wrapper">
@@ -532,17 +526,18 @@
                 <p class="field-group">
                   <span class="quantity-wrapper">
                     <label class="label-input" for="input-number">Количество:</label>
-                      <span class="value-info"></span>
-                      <span class="value-info-tooltip visually-hidden">
+                      <button class="value-info" type="button">
+                        <span class="value-info-tooltip">
                           Постараемся найти, сколько нужно. Привезём сколько получится по требованиям
                           к провозу багажа.
                       </span>
-                    </span>
-                    <span class="quantity-wrapper">
-                      <button class="value-minus" type="button"></button>
-                      <input class="modal-form-number field" type="text" id="input-number" name="input-number" placeholder="1">
-                      <button class="value-plus" type="button"></button>
-                    </span>
+                      </button>
+                  </span>
+                  <span class="quantity-wrapper">
+                    <button class="value-minus" type="button"></button>
+                    <input class="modal-form-number field" type="text" id="input-number" name="input-number" placeholder="1">
+                    <button class="value-plus" type="button"></button>
+                  </span>
                 </p>
               </li>
               <li class="modal-form-item">
