дорабатывает визуальную часть страницы

--- a/catalog.html
+++ b/catalog.html
@@ -229,13 +229,15 @@
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="radio" name="product-group" value="yes-bluetooth" checked>
+                    <input class="visually-hidden control-input" type="radio" name="product-group" value="yes-bluetooth" checked>
+                    <span class="control-mark-radio"></span>
                     Есть
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="radio" name="product-group" value="no-bluetooth">
+                    <input class="visually-hidden control-input" type="radio" name="product-group" value="no-bluetooth">
+                    <span class="control-mark-radio"></span>
                     Нет
                   </label>
                 </li>
