--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </svg>
                 Корзина
               </a>
-              <div class="popover-cart visually-hidden">
+              <div class="popover-cart">
                 <div class="popover-cart-content">
                   <ul class="popover-cart-list">
                     <li class="popover-cart-item cart-item">
@@ -110,7 +110,7 @@
                   </svg>
                 </span>
               </a>
-              <div class="popover">
+              <div class="popover visually-hidden">
                 <div class="popover-content">
                     <ul class="popover-list">
                       <li class="popover-list-item"><p>Виртуальная реальность</p></li>
