pixcel perfect index

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </svg>
                 Корзина
               </a>
-              <div class="popover-cart">
+              <div class="popover-cart visually-hidden">
                 <div class="popover-cart-content">
                   <ul class="popover-cart-list">
                     <li class="popover-cart-item cart-item">
@@ -131,7 +131,7 @@
               <a class="navigation-services navigation-services-margin" href="#">Доставка</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-services navigation-services-margin" href="#">Гарантии</a>
+              <a class="navigation-services navigation-services-margin" href="#">Гарантия</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-services navigation-services-margin" href="#">Контакты</a>
@@ -393,8 +393,8 @@
               <b class="contact-text">Интернет-магазин «Девайс»</b>
               <p class="contact-paragraph">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p><p class="contact-phone">+7 (812) 812-12-12</p>
               <b class="contact-text">Время работы</b>
-              <p class="contact-paragraph">пн—пт: с 10:00 до 22:00</p>
-              <p class="contact-paragraph">сб—вс: с 10:00 до 19:00</p>
+              <p class="contact-paragraph contact-paragraph-data">пн—пт: с 10:00 до 22:00</p>
+              <p class="contact-paragraph contact-paragraph-data">сб—вс: с 10:00 до 19:00</p>
               <a class="button" href="#">Напишите нам</a>
             </div>
           </div>
@@ -402,7 +402,7 @@
         <section class="distribution">
           <div class="page-container">
             <h2 class="distribution-heading">Подпишитесь на рассылку</h2>
-            <p class="distribution-paragraph">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+            <p class="distribution-paragraph">Еженедельный дайджест с обзорами новинок</br>, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
             <form class="distribution-form" action="https://echo.htmlacademy.ru/" method="post">
               <input class="input-distribution" type="email" id="email-distribution" name="email-distribution" placeholder="Ваш e-mail">
               <button class="button-distribution" type="submit">Подписаться</button>
@@ -475,8 +475,8 @@
             </li>
           </ul>
         </div>
-        <div class="footer-contacts">
-          <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <div class="footer-contacts footer-contacts-right">
+          <a class="footer-contacts-address-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
           <a class="logo-html-academy" href = "#">
             <svg class="html-academy-icon" fill="#FFC700" width="115" height="33" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
               <path d="M0 12.9V15.5H2.5V12.9H0Z"/>
@@ -496,7 +496,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal-container">
+    <div class="modal-container visually-hidden">
       <div class="modal modal-delivery">
         <section class="modal-content">
           <div class="modal-wrapper">
