pixel perfect catalog

--- a/catalog.html
+++ b/catalog.html
@@ -29,7 +29,7 @@
             <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
               <span class="navigation-icon icon-search">
               </span>
-                <input class="input-search" type="text" id="search-nav" name="search-nav" placeholder="Поиск по сайту">
+                <input class="input-search" type="text" id="search-nav" name="search-nav" placeholder="Текст поиска">
               <button class="button-search" type="submit">Найти</button>
             </form>
           </li>
@@ -110,7 +110,7 @@
                 </svg>
               </span>
             </a>
-            <div class="popover">
+            <div class="popover visually-hidden">
               <div class="popover-content">
                   <ul class="popover-list">
                     <li class="popover-list-item"><p>Виртуальная реальность</p></li>
@@ -159,12 +159,12 @@
       <section class="catalog-products">
         <div class="page-container-catalog">
           <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-            <h2 class="catalog-title catalog-filter">Фильтр:</h2>
+            <h2 class="catalog-title filter-title">Фильтр:</h2>
             <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">Стоимость:</legend>
               <div class="range">
                 <div class="range-scale">
-                  <div class="range-bar" style="left: 42px; width: 119px">
+                  <div class="range-bar" style="left: 0; width: 119px">
                     <button class="range-toggle toggle-min">
                       <span class="visually-hidden">Изменить минимальную цену.</span>
                     </button>
