пиксель-перфект + проверяет на переполнение

--- a/catalog.html
+++ b/catalog.html
@@ -410,8 +410,8 @@
             </li>
           </ul>
         </div>
-        <div class="footer-contacts">
-          <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <div class="footer-contacts footer-contacts-right">
+          <a class="footer-contacts-address-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
           <a class="logo-html-academy" href = "#">
             <svg class="html-academy-icon" fill="#FFC700" width="115" height="33" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
               <path d="M0 12.9V15.5H2.5V12.9H0Z"/>
